# honeycomb

./: .coveragerc  .dockerignore  .gitignore  CONTRIBUIR.md  CONTRIBUTE.md  CRUD_SUMMARY.md  Dockerfile  MANIFEST.in  README.md  README.txt  development.ini  production.ini  pyproject.toml  pytest.ini  setup.py  testing.ini
.github/workflows/: notify-deployment.yml
.mise/: config.toml
.mise/tasks/: dev.py
docs/: Makefile  cronograma-general.plantuml
honeycomb/: __init__.py  routes.py  schemas.py
honeycomb/models/: __init__.py  axes.py  beehive.py  users.py
honeycomb/security/: __init__.py  policy.py
honeycomb/static/: theme.css
honeycomb/static/Serpiente/: index.html  script.js  style.css
honeycomb/static/WEB/: index.html
honeycomb/static/assets/: grafo_reproduccion.json  paisaje_tematico.json
honeycomb/templates/: 404.jinja2  beehive.jinja2  cell.jinja2  create_cell_animation.jinja2  create_cell_icon.jinja2  create_cell_richtext.jinja2  create_cell_text.jinja2  create_cell_webcontent.jinja2  edit_cell_animation.jinja2  edit_cell_icon.jinja2  edit_cell_richtext.jinja2  edit_cell_text.jinja2  edit_cell_webcontent.jinja2  honeycomb.jinja2  honeycombgraph.jinja2  layout.jinja2  login.jinja2  view_cell.jinja2  view_cell_animation.jinja2  view_cell_node.jinja2  view_cell_text.jinja2  view_cell_webcontent.jinja2
honeycomb/views/: __init__.py  api.py  auth.py  default.py  notfound.py
tests/: conftest.py  test_crud.py  test_views.py
