[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honeycomb"
version = "0.1.0"
description = "Backend for Honeycomb"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cornice>=6.1.0",
    "deform>=2.0.15",
    "numpy>=2.3.5",
    "plaster-pastedeploy>=1.0.1",
    "pyramid>=2.0.2",
    "pyramid-debugtoolbar>=4.12.1",
    "pyramid-jinja2>=2.10.1",
    "pyramid-retry>=2.1.1",
    "pyramid-storage>=1.3.2",
    "pyramid-tm>=2.6",
    "pyramid-zodbconn>=0.8.1",
    "scipy>=1.16.3",
    "transaction>=5.0",
    "waitress>=3.0.2",
    "zodb>=6.0.1",
]

[dependency-groups]
dev = [
    "rich>=14.1.0",
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "webtest>=3.0.6",
]

[project.entry-points."paste.app_factory"]
main = "honeycomb:main"
